--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   <body>
     <div class='sidebar'>
       <div class='heading'>
-        <h1><center>Lovell Ancestor Timeline</center></h1>
+        <h1><center>Lovell Ancestor Timeline (Click a Name to Begin)</center></h1>
       </div>
       <div id='listings' class='listings'></div>
     </div>
