--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <title>Ancestor Locator (Click a Name to Begin)</title>
+    <title>Ancestor Locator</title>
     <meta name='robots' content='noindex, nofollow'>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet'>
@@ -183,7 +183,7 @@
   <body>
     <div class='sidebar'>
       <div class='heading'>
-        <h1><center>Lovell Ancestor Timeline (Click a Name to Begin)</center></h1>
+        <h1><center>Lovell Ancestor Timeline<br>(Click a Name to Begin)</center></h1>
       </div>
       <div id='listings' class='listings'></div>
     </div>
