--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       }
 
       a {
-        color:#404040;
+        color:rgb(223, 222, 178);
         text-decoration:none;
       }
 
       a:hover {
-        color:#101010;
+        color:#fff;
       }
 
       .heading {
@@ -183,7 +183,7 @@
   <body>
     <div class='sidebar'>
       <div class='heading'>
-        <h1><center>Lovell Ancestor Timeline<br>(Click a Name to Begin)</center></h1>
+        <h1><center><a href="rigs.html">Switch Ancestor Timeline</a></center></h1>
       </div>
       <div id='listings' class='listings'></div>
     </div>
@@ -207,7 +207,7 @@
         attributionControl: false,
         style: 'mapbox://styles/thinklater/ckaqa1qot091h1iqhgur74yq6', 
         center: [24.43300509452819824, 49.15749272621892],
-        zoom: 4,
+        zoom: 3,
         scrollZoom: true
       });
 
