--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css' rel='stylesheet' />
     <style>
       body {
-        color:#404040;
-        font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
+        color:#000000;
+        font:400 18px/25px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
         margin:0;
         padding:0;
         -webkit-font-smoothing:antialiased;
@@ -25,7 +25,7 @@
 
       .sidebar {
         position:absolute;
-        width:25.0000%;
+        width:30.0000%;
         height:100%;
         top:0;left:0;
         overflow:hidden;
@@ -37,13 +37,13 @@
 
       .map {
         position:absolute;
-        left:25.0000%;
-        width:75.0000%;
+        left:30.0000%;
+        width:70.0000%;
         top:0;bottom:0;
       }
 
       h1 {
-        font-size:22px;
+        font-size:25px;
         margin:0;
         font-weight:400;
         line-height: 20px;
@@ -51,7 +51,7 @@
       }
 
       a {
-        color:rgb(223, 222, 178);
+        color:rgb(214, 213, 125);
         text-decoration:none;
       }
 
@@ -115,7 +115,7 @@
         cursor: pointer;
         height: 24px;
         width: 24px;
-        background-image: url(markers.png);
+        background-image: url(charlemagnes.png);
         background-color: rgba(0, 0, 0, 0);
       }
 
@@ -183,7 +183,7 @@
   <body>
     <div class='sidebar'>
       <div class='heading'>
-        <h1><center><a href="rigs.html">Switch Between Ancestor Timeline (King Charlemagne)</a></center></h1>
+        <h1><center><a href="rigs.html">Switch Ancestor Bloodline<br>(King Charlemagne)</a></center></h1>
       </div>
       <div id='listings' class='listings'></div>
     </div>
